--- a/.cicd/preCodeReview/Jenkinsfile
+++ b/.cicd/preCodeReview/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline{
         stage("Build"){
             steps{
                 echo "========Building Portfolio========"
-                sh "docker compose build"
+                sh "docker-compose build"
             }
             post{
                 always{
