Removed unnecessary escape chars

--- a/.cicd/preCodeReview/Jenkinsfile
+++ b/.cicd/preCodeReview/Jenkinsfile
@@ -11,13 +11,13 @@ pipeline{
         stage("Update Commit Status to Pending") {
             steps {
                 echo "========Setting Portfolio Commit Status========"
-                sh "curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
+                sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
                 -H accept: application/vnd.github.v3+json \
                 -X POST \
-                -d { \
-                    \"state\": \"pending\", \
-                    \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
-                }"
+                -d \'{ \
+                    "state": "pending", \
+                    "target_url": "http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console" \
+                }\''
             }
         }
         stage("Build"){
@@ -42,23 +42,23 @@ pipeline{
     post{
         success{
             echo "========Setting Portfolio Commit Status========"
-                sh "curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
-                -H accept: application/vnd.github.v3+json \
-                -X POST \
-                -d { \
-                    \"state\": \"success\", \
-                    \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
-                }"
+            sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
+            -H accept: application/vnd.github.v3+json \
+            -X POST \
+            -d \'{ \
+                "state": "success", \
+                "target_url": "http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console" \
+            }\''
         }
         failure{
             echo "========Setting Portfolio Commit Status========"
-                sh "curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
-                -H accept: application/vnd.github.v3+json \
-                -X POST \
-                -d { \
-                    \"state\": \"failure\", \
-                    \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
-                }"
+            sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
+            -H accept: application/vnd.github.v3+json \
+            -X POST \
+            -d \'{ \
+                "state": "failure", \
+                "target_url": "http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console" \
+            }\''
         }
     }
 }
