--- a/.cicd/preCodeReview/Jenkinsfile
+++ b/.cicd/preCodeReview/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline{
         failure{
             echo "========Setting Portfolio Commit Status========"
             sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
-            -H accept: application/vnd.github.v3+json \
+            -H Accept:application/vnd.github.v3+json \
             -X POST \
             -d \'{ \
                 "state": "failure", \
