--- a/.cicd/preCodeReview/Jenkinsfile
+++ b/.cicd/preCodeReview/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline{
             steps {
                 echo "========Setting Portfolio Commit Status========"
                 sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
-                -H accept: application/vnd.github.v3+json \
+                -H Accept:application/vnd.github.v3+json \
                 -X POST \
                 -d \'{ \
                     "state": "pending", \
@@ -43,7 +43,7 @@ pipeline{
         success{
             echo "========Setting Portfolio Commit Status========"
             sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
-            -H accept: application/vnd.github.v3+json \
+            -H Accept:application/vnd.github.v3+json \
             -X POST \
             -d \'{ \
                 "state": "success", \
