--- a/.cicd/preCodeReview/Jenkinsfile
+++ b/.cicd/preCodeReview/Jenkinsfile
@@ -6,7 +6,8 @@ pipeline{
         REPO_NAME='portfolio'
         GITHUB_ORG='jackwhelan'
         GH_TOKEN=credentials('GH_TOKEN')
-        TARGET_URL="http://89.100.10.68:8080/job/${env.JOB_NAME}/${env.BUILD_NUMBER}/console"
+        JOB_NAME="${env.JOB_NAME}"
+        BUILD_NUMBER="${env.BUILD_NUMBER}"
     }
     stages{
         stage("Update Commit Status to Pending") {
@@ -15,10 +16,10 @@ pipeline{
                 sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
                 -H Accept:application/vnd.github.v3+json \
                 -X POST \
-                -d \'{ \
-                    "state": "pending", \
-                    "target_url": "$TARGET_URL" \
-                }\''
+                -d \"{ \
+                    \"state\": \"pending\", \
+                    \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
+                }\"'
             }
         }
         stage("Build"){
@@ -46,20 +47,20 @@ pipeline{
             sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
             -H Accept:application/vnd.github.v3+json \
             -X POST \
-            -d \'{ \
-                "state": "success", \
-                "target_url": "http://89.100.10.68:8080/job/${env.JOB_NAME}/${env.BUILD_NUMBER}/console" \
-            }\''
+            -d \"{ \
+                \"state\": \"success\", \
+                \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
+            }\"'
         }
         failure{
             echo "========Setting Portfolio Commit Status========"
             sh 'curl https://api.github.com/repos/${GITHUB_ORG}/${REPO_NAME}/statuses/${GIT_COMMIT}?access_token=${GH_TOKEN} \
             -H Accept:application/vnd.github.v3+json \
             -X POST \
-            -d \'{ \
-                "state": "failure", \
-                "target_url": "http://89.100.10.68:8080/job/${env.JOB_NAME}/${env.BUILD_NUMBER}/console" \
-            }\''
+            -d \"{ \
+                \"state\": \"failure\", \
+                \"target_url\": \"http://89.100.10.68:8080/job/${JOB_NAME}/${BUILD_NUMBER}/console\" \
+            }\"'
         }
     }
 }
