--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
-version: "3.8"
+version: "3"
 services:
     load_balancer:
         build: load_balancer
         ports:
-            - "80:80"
+            - "443:443"
         links:
             - react
             - express
+        volumes:
+            - /home/jack/ssl:/home/jack/ssl
     react:
         build: frontend
     express:
