--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "cross-env": "7.0.3",
-    "eslint": "7.26.0",
-    "expect": "26.6.2",
-    "mocha": "8.4.0",
-    "nodemon": "2.0.7"
+    "cross-env": "^7.0.3",
+    "eslint": "^7.26.0",
+    "expect": "^26.6.2",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7"
   }
 }
