Added development conf and compose
Also added fontawesome icons to nav.

--- a/load_balancer/production.conf
+++ b/load_balancer/production.conf
@@ -10,6 +10,9 @@ http {
 
     server {
         listen 80;
+	      listen 443 ssl;
+        ssl_certificate /home/jack/ssl/jackwhelan_dev_chain.crt;
+        ssl_certificate_key /home/jack/ssl/server.key;
 
         location /api {
             proxy_pass http://backend;
